--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "puppeteer-scraper",
+  "name": "web-scraper-api",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer-core": "^10.4.0",
-    "chrome-aws-lambda": "^10.1.0"
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "puppeteer": "^21.3.8"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
