--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "web-scraper-api",
+  "name": "webscraper",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "puppeteer": "^21.3.8"
-  },
-  "engines": {
-    "node": ">=16"
+    "express": "^4.17.1",
+    "puppeteer": "^10.0.0",
+    "cors": "^2.8.5"
   }
 }
